--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@gsap/react": "^2.1.2",
+        "clsx": "^2.1.1",
+        "cva": "npm:class-variance-authority@^0.7.1",
         "framer-motion": "^12.0.5",
+        "gsap": "^3.14.2",
+        "lenis": "^1.3.17",
         "lucide-react": "^0.474.0",
         "next": "15.1.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "tailwind-merge": "^2.6.0",
-        "tailwindcss-animate": "^1.0.7",
-        "clsx": "^2.1.1",
-        "cva": "npm:class-variance-authority@^0.7.1"
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
