--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "gsap": "^3.14.2",
         "lenis": "^1.3.17",
         "lucide-react": "^0.474.0",
-        "next": "15.1.6",
+        "next": "^16.1.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "tailwind-merge": "^2.6.0",
@@ -30,7 +30,7 @@
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "eslint": "^9",
-        "eslint-config-next": "15.1.6",
+        "eslint-config-next": "^16.1.6",
         "postcss": "^8",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
